Fix [Nuclio] Functions: table overflows viewport (#1248)

--- a/src/nuclio/functions/functions.less
+++ b/src/nuclio/functions/functions.less
@@ -12,8 +12,6 @@ ncl-functions {
 
   .igz-info-page-content-wrapper {
     .igz-info-page-content {
-      min-width: 1380px;
-
       .table-actions {
         display: flex;
         align-items: center;
